Update 109.2 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 1.md
@@ -10,4 +10,293 @@
 
 ## Введение
 
-В любой сети TCP / IP каждый узел должен настроить свой сетевой адаптер в соответствии с требованиями сети, иначе они не смогут взаимодействовать друг с другом. Поэтому системный администратор должен предоставить базовую конфигурацию, чтобы операционная система могла настроить соответствующий сетевой интерфейс, а также идентифицировать себя и основные функции сети при каждой загрузке. Сетевые настройки не зависят от операционных систем, но у последних есть свои методы хранения и применения этих настроек. Системы Linux полагаются на конфигурации, хранящиеся в текстовых файлах в каталоге / etc, чтобы обеспечить сетевое соединение во время загрузки. Стоит знать, как эти файлы используются, чтобы избежать потери связи из-за неправильной локальной конфигурации.
+В любой сети TCP/IP каждый узел должен настроить свой сетевой адаптер в соответствии с требованиями сети, иначе они не смогут взаимодействовать друг с другом. Поэтому системный администратор должен предоставить базовую конфигурацию, чтобы операционная система могла настроить соответствующий сетевой интерфейс, а также идентифицировать себя и основные функции сети при каждой загрузке. 
+
+Сетевые настройки не зависят от операционных систем, но у последних есть свои методы хранения и применения этих настроек. Системы Linux полагаются на конфигурации, хранящиеся в текстовых файлах в каталоге `/etc`, чтобы обеспечить сетевое соединение во время загрузки. Стоит знать, как эти файлы используются, чтобы избежать потери связи из-за неправильной локальной конфигурации.
+
+
+## Сетевой интерфейс
+
+*Сетевой интерфейс* - это термин, которым операционная система обозначает канал связи, настроенный для работы с сетевым оборудованием, подключенным к системе, таким как устройство Ethernet или Wi-Fi. Исключением является интерфейс *обратной связи*, который операционная система использует, когда ей необходимо установить соединение с самой собой, но основная цель сетевого интерфейса - предоставить маршрут, по которому могут быть отправлены локальные данные и могут быть получены удаленные данные. Если сетевой интерфейс не настроен должным образом, операционная система не сможет взаимодействовать с другими машинами в сети. 
+
+В большинстве случаев правильные настройки интерфейса либо определяются по умолчанию, либо настраиваются во время установки операционной системы. Тем не менее, эти настройки часто необходимо проверять или даже изменять, когда связь не работает должным образом или когда поведение интерфейса требует настройки. Существует множество команд Linux для перечисления сетевых интерфейсов, присутствующих в системе, но не все из них доступны во всех дистрибутивах. Однако команда `ip` является частью базового набора сетевых инструментов, поставляемых со всеми дистрибутивами Linux, и может использоваться для вывода списка сетевых интерфейсов. Полная команда для отображения интерфейсов - это `ip link show`:
+
+```console
+$ ip link show
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+        link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp3s5: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
+        link/ether 00:16:3e:8d:2b:5b brd ff:ff:ff:ff:ff:ff
+```
+
+Если доступно, также можно использовать команду `nmcli device`:
+
+```console
+$ nmcli device
+DEVICE      TYPE      STATE      CONNECTION
+enp3s5      ethernet  connected  Gigabit Powerline Adapter
+lo          loopback  unmanaged  --
+```
+
+Команды, показанные в примерах, не изменяют никаких настроек в системе, поэтому они могут быть выполнены непривилегированным пользователем. Обе команды перечисляют два сетевых интерфейса: `lo` (интерфейс обратной связи) и `enp3s5` (интерфейс Ethernet). 
+
+Настольные компьютеры и ноутбуки под управлением Linux обычно имеют два или три предопределенных сетевых интерфейса, один для виртуального интерфейса обратной петли, а другие назначены сетевому оборудованию, обнаруженному системой. С другой стороны, серверы и сетевые устройства под управлением Linux могут иметь десятки сетевых интерфейсов, но ко всем из них применяются одни и те же принципы. Абстракция, предоставляемая операционной системой, позволяет настраивать сетевые интерфейсы с использованием одних и тех же методов, независимо от базового оборудования. 
+
+Однако знание подробностей об аппаратном обеспечении интерфейса может быть полезно для лучшего понимания того, что происходит, когда связь не работает должным образом. Например, в системе, где доступно множество сетевых интерфейсов, может быть неочевидно, какой из них соответствует Wi-Fi, а какой - Ethernet. По этой причине Linux использует соглашение об именах интерфейсов, которое помогает определить, какой сетевой интерфейс соответствует какому устройству и порту.
+
+
+## Имена интерфейсов
+
+В старых дистрибутивах Linux сетевые интерфейсы Ethernet назывались `eth0`, `eth1` и т. д., пронумерованные в соответствии с порядком, в котором ядро идентифицирует устройства. Беспроводные интерфейсы были названы `wlan0`, `wlan1` и т.д. Это соглашение об именах, однако, не уточняет, какой конкретный порт Ethernet совпадает, например, с интерфейсом `eth0`. В зависимости от того, как было обнаружено оборудование, два сетевых интерфейса могли даже поменяться именами после перезагрузки. 
+
+Чтобы преодолеть эту двусмысленность, в более поздних системах Linux используется предсказуемое соглашение об именах для сетевых интерфейсов, устанавливая более тесную взаимосвязь между именем интерфейса и базовым подключением оборудования. 
+
+В дистрибутивах Linux, использующих схему именования systemd, все имена интерфейсов начинаются с двухсимвольного префикса, обозначающего тип интерфейса: 
+
+`en`  
+Ethernet 
+
+`ib`  
+InfiniBand 
+
+`sl`  
+IP последовательной линии (скольжение) 
+
+`wl`  
+Беспроводная локальная сеть (WLAN) 
+
+`ww`  
+Беспроводная глобальная сеть (WWAN) 
+
+От более высокого до более низкого приоритета операционная система использует следующие правила для именования и нумерации сетевых интерфейсов: 
+1. Назовите интерфейс после индекса, предоставленного BIOS или встроенным ПО встроенных устройств, например `eno1`. 
+2. Назовите интерфейс после индекса слота PCI Express, как указано в BIOS или прошивке, например `ens1`. 
+3. Назовите интерфейс по его адресу на соответствующей шине, например `enp3s5`. 
+4. Назовите интерфейс по MAC-адресу интерфейса, например `enx78e7d1ea46da`. 
+5. Назовите интерфейс, используя устаревшее соглашение, например `eth0`. 
+
+Правильно, например, предположить, что сетевой интерфейс `enp3s5` был назван так, потому что он не соответствовал первым двум методам именования, поэтому вместо него использовался его адрес в соответствующей шине и слоте. Адрес устройства `03:05.0`, найденный в выходных данных команды `lspci`, показывает связанное устройство:
+
+```console
+$ lspci | fgrep Ethernet
+03:05.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL-8110SC/8169SC Gigabit Ethernet (rev 10)
+```
+
+Сетевые интерфейсы создаются самим ядром Linux, но для взаимодействия с ними можно использовать множество команд. Обычно конфигурация происходит автоматически, и нет необходимости изменять настройки вручную. Тем не менее, с помощью имени интерфейса можно указать ядру, как действовать при его настройке, если это необходимо.
+
+
+## Управление интерфейсом
+
+За прошедшие годы было разработано несколько программ для взаимодействия с сетевыми функциями, предоставляемыми ядром Linux. Хотя старую команду `ifconfig` по-прежнему можно использовать для выполнения простых настроек интерфейса и запросов, теперь она устарела из-за ограниченной поддержки интерфейсов, отличных от Ethernet. 
+
+Команда ifconfig была заменена командой ip, которая способна управлять многими другими аспектами интерфейсов TCP/IP, такими как маршруты и туннели. Многие возможности команды `ip` могут оказаться излишними для большинства обычных задач, поэтому существуют вспомогательные команды, облегчающие активацию и настройку сетевых интерфейсов. Команды `ifup` и `ifdown` могут использоваться для настройки сетевых интерфейсов на основе определений интерфейсов, найденных в файле `/etc/network/interfaces`. Хотя их можно вызывать вручную, эти команды обычно выполняются автоматически во время загрузки системы. 
+
+Все сетевые интерфейсы, управляемые `ifup` и `ifdown`, должны быть перечислены в файле `/etc/network/interfaces`. Формат, используемый в файле, прост: строки, начинающиеся со слова `auto`, используются для идентификации физических интерфейсов, которые будут активированы, когда `ifup` выполняется с параметром `-a`. Имя интерфейса должно следовать за словом `auto` в той же строке. Все интерфейсы, помеченные как `auto`, открываются во время загрузки в том порядке, в котором они перечислены.
+
+>Методы настройки сети, используемые `ifup` и `ifdown`, не стандартизированы во всех дистрибутивах Linux. CentOS, например, хранит настройки интерфейса в отдельных файлах в каталоге `/etc/sysconfig/network-scripts/`, а используемый в них формат конфигурации немного отличается от формата, используемого в `/etc/network/interfaces`.
+
+Фактическая конфигурация интерфейса записывается в другой строке, начиная со слова `iface`, за которым следует имя интерфейса, имя семейства адресов, которое использует интерфейс, и имя метода, используемого для настройки интерфейса. В следующем примере показан файл базовой конфигурации для интерфейсов `lo` (loopback) и `enp3s5`:
+
+```console
+auto lo
+iface lo inet loopback
+
+auto enp3s5
+iface enp3s5 inet dhcp
+```
+
+Семейство адресов должно быть `inet` для сетей TCP/IP, но также имеется поддержка сетей IPX (`ipx`) и сетей IPv6 (`inet6`). Интерфейсы обратной петли используют метод конфигурации `loopback`. При использовании метода `dhcp` интерфейс будет использовать настройки IP, предоставленные сетевым DHCP-сервером. Настройки из примера конфигурации позволяют выполнить команду `ifup` с использованием имени интерфейса `enp3s5` в качестве аргумента:
+
+```console
+# ifup enp3s5
+Internet Systems Consortium DHCP Client 4.4.1
+Copyright 2004-2018 Internet Systems Consortium.
+All rights reserved.
+For info, please visit https://www.isc.org/software/dhcp/
+
+Listening on LPF/enp3s5/00:16:3e:8d:2b:5b
+Sending on   LPF/enp3s5/00:16:3e:8d:2b:5b
+Sending on   Socket/fallback
+DHCPDISCOVER on enp3s5 to 255.255.255.255 port 67 interval 4
+DHCPOFFER of 10.90.170.158 from 10.90.170.1
+DHCPREQUEST for 10.90.170.158 on enp3s5 to 255.255.255.255 port 67
+DHCPACK of 10.90.170.158 from 10.90.170.1
+bound to 10.90.170.158 -- renewal in 1616 seconds.
+```
+
+В этом примере для интерфейса `enp3s5` был выбран метод `dhcp`, поэтому команда `ifup` вызвала клиентскую программу DHCP для получения настроек IP от сервера DHCP. Точно так же команду `ifdown enp3s5` можно использовать для выключения интерфейса. 
+
+В сетях без DHCP-сервера вместо него может использоваться статический метод, а настройки IP предоставляются вручную в `/etc/network/interfaces`. Например:
+
+```console
+iface enp3s5 inet static
+    address 192.168.1.2/24
+    gateway 192.168.1.1
+```
+
+Интерфейсы, использующие статический метод, не нуждаются в соответствующей автоматической директиве, поскольку они вызываются всякий раз, когда обнаруживается сетевое оборудование. 
+
+Если один и тот же интерфейс имеет более одной записи `iface`, то при вызове этого интерфейса будут применены все настроенные адреса и параметры. Это полезно для настройки адресов IPv4 и IPv6 на одном интерфейсе, а также для настройки нескольких адресов одного типа на одном интерфейсе.
+
+
+## Локальные и удаленные имена
+
+Работающая настройка TCP/IP - это лишь первый шаг к полноценному использованию сети. Помимо возможности идентифицировать узлы в сети по их IP-номерам, система должна иметь возможность идентифицировать их по именам, более понятным людям. 
+
+Имя, по которому система идентифицирует себя, можно настроить, и рекомендуется определять его, даже если машина не предназначена для подключения к сети. Локальное имя часто совпадает с сетевым именем машины, но это не всегда так. Если файл `/etc/hostname` существует, операционная система будет использовать содержимое первой строки в качестве своего локального имени, после чего просто назовет имя хоста. Строки, начинающиеся с `#` внутри `/etc/hostname`, игнорируются. 
+
+Файл `/etc/hostname` можно редактировать напрямую, но имя хоста машины также можно определить с помощью команды `hostnamectl`. При поставке с подкомандой `set-hostname` команда `hostnamectl` примет имя, указанное в качестве аргумента, и запишет его в `/etc/hostname`:
+
+```comsole
+# hostnamectl set-hostname storage
+# cat /etc/hostname
+storage
+```
+
+Имя хоста, определенное в `/etc/hostname`, является статическим именем хоста, то есть именем, которое используется для инициализации имени хоста системы при загрузке. Статическое имя хоста может быть строкой произвольной формы длиной до 64 символов. Однако рекомендуется, чтобы он состоял только из символов нижнего регистра ASCII без пробелов и точек. Он также должен ограничиваться форматом, разрешенным для меток доменных имен DNS, хотя это не является строгим требованием. 
+
+Команда `hostnamectl` может установить два других типа имен хостов в дополнение к статическому имени хоста:
+
+Красивое имя хоста  
+В отличие от статического имени хоста, красивое имя хоста может включать всевозможные специальные символы. Его можно использовать для установки более описательного имени для машины, например «Общее хранилище LAN»:
+
+```console
+# hostnamectl --pretty set-hostname "LAN Shared Storage"
+```
+
+Временное имя хоста  
+Используется, когда статическое имя хоста не задано или когда это имя `localhost` по умолчанию. Временным именем хоста обычно является имя, установленное вместе с другими автоматическими конфигурациями, но оно также может быть изменено командой `hostnamectl`, например
+
+```console
+# hostnamectl --transient set-hostname generic-host
+```
+
+Если не используется ни параметр `--pretty`, ни `--transient`, то для всех трех типов имени хоста будет установлено данное имя. Чтобы установить статическое имя хоста, но не красивые и временные имена, вместо этого следует использовать параметр `--static`. Во всех случаях в файле `/etc/hostname` хранится только статическое имя хоста. Команда `hostnamectl` также может использоваться для отображения различных описательных и идентификационных битов информации о работающей системе:
+
+```console
+$ hostnamectl status
+     Static hostname: storage
+     Pretty hostname: LAN Shared Storage
+  Transient hostname: generic-host
+           Icon name: computer-server
+             Chassis: server
+          Machine ID: d91962a957f749bbaf16da3c9c86e093
+             Boot ID: 8c11dcab9c3d4f5aa53f4f4e8fdc6318
+    Operating System: Debian GNU/Linux 10 (buster)
+              Kernel: Linux 4.19.0-8-amd64
+        Architecture: x86-64
+```
+
+Это действие по умолчанию для команды `hostnamectl`, поэтому подкоманду `status` можно не указывать. 
+
+Что касается имен удаленных сетевых узлов, существует два основных способа, которыми операционная система может реализовать для сопоставления имен и IP-номеров: использовать локальный источник или использовать удаленный сервер для преобразования имен в IP-номера и наоборот. Эти методы могут дополнять друг друга, и их порядок приоритета определяется в файле конфигурации *переключателя службы имен*: `/etc/nsswitch.conf`. Этот файл используется системой и приложениями для определения не только источников совпадений «имя-IP», но также источников, из которых можно получить информацию об услугах имен в ряде категорий, называемых *базами данных*. 
+
+База данных хостов отслеживает соответствие между именами хостов и номерами хостов. Строка внутри `/etc/nsswitch.conf`, начинающаяся с `hosts`, определяет службы, отвечающие за предоставление ассоциаций для него:
+
+```console
+hosts: files dns
+```
+
+В этом примере записи `files` и `dns` - это имена служб, которые определяют, как будет работать процесс поиска имен хостов. Сначала система будет искать совпадения в локальных файлах, а затем запросить совпадения у службы DNS. 
+
+Локальный файл для базы данных хостов - это `/etc/hosts`, простой текстовый файл, который связывает IP-адреса с именами хостов, по одной строке на IP-адрес, например:
+
+```console
+127.0.0.1 localhost
+```
+
+IP-номер *127.0.0.1* является адресом по умолчанию для интерфейса обратной связи, следовательно, он связан с именем *localhost*. 
+
+Также возможно привязать дополнительные псевдонимы к одному и тому же IP-адресу. Псевдонимы могут содержать альтернативное написание, более короткие имена хостов и должны быть добавлены в конце строки, например:
+
+```console
+192.168.1.10 foo.mydomain.org foo
+```
+
+Правила форматирования файла `/etc/hosts`: 
+* Поля записи разделяются любым количеством пробелов и/или символов табуляции. 
+* Текст от символа `#` до конца строки является комментарием и игнорируется. 
+* Имена хостов могут содержать только буквенно-цифровые символы, знаки минус и точки. 
+* Имена хостов должны начинаться с буквенного символа и заканчиваться буквенно-цифровым символом. 
+ 
+Адреса IPv6 также могут быть добавлены в `/etc/hosts`. Следующая запись относится к адресу обратной связи IPv6:
+
+```console
+::1 localhost ip6-localhost ip6-loopback
+```
+
+Следуя спецификации службы `files`, спецификация `dns` сообщает системе, что она должна запросить у службы DNS желаемое сопоставление имени/IP-адреса. Набор подпрограмм, отвечающих за этот метод, называется преобразователем, а его файл конфигурации - `/etc/resolv.conf`. В следующем примере показан общий `/etc/resolv.conf`, содержащий записи для общедоступных DNS-серверов Google:
+
+```console
+nameserver 8.8.4.4
+nameserver 8.8.8.8
+```
+
+Как показано в примере, ключевое слово `nameserver` указывает IP-адрес DNS-сервера. Требуется только один сервер имен, но можно указать до трех серверов имен. Дополнительные будут использоваться в качестве запасного варианта. Если записи о сервере имен отсутствуют, по умолчанию используется сервер имен на локальном компьютере. 
+
+Преобразователь можно настроить на автоматическое добавление домена к именам перед обращением к ним на сервере имен. Например:
+
+```console
+nameserver 8.8.4.4
+nameserver 8.8.8.8
+domain mydomain.org
+search mydomain.net mydomain.com
+```
+
+Запись домена устанавливает `mydomain.org` в качестве имени локального домена, поэтому при запросах имен в этом домене будет разрешено использовать короткие имена относительно локального домена. Запись поиска имеет аналогичную цель, но принимает список доменов, которые можно попробовать, если указано короткое имя. По умолчанию он содержит только локальное доменное имя.
+
+
+# Упражнения для закрепления
+
+1. Какие команды можно использовать для вывода списка сетевых адаптеров, присутствующих в системе? 
+2. Какой тип сетевого адаптера с именем интерфейса `wlo1`? 
+3. Какую роль играет файл `/etc/network/interfaces` во время загрузки? 
+4. Какая запись в `/etc/network/interfaces` настраивает интерфейс `eno1` для получения настроек IP с помощью DHCP?
+
+
+## Упражнения на размышление
+
+1. Как можно использовать команду `hostnamectl` для изменения только статического имени хоста локального компьютера на брандмауэр? 
+2. Какие детали, кроме имен хостов, можно изменить с помощью команды `hostnamectl`? 
+3. Какая запись в `/etc/hosts` связывает брандмауэр и маршрутизатор с IP `10.8.0.1`? 
+4. Как можно изменить файл `/etc/resolv.conf`, чтобы все запросы DNS отправлялись на `1.1.1.1`?
+
+
+## Резюме
+
+В этом уроке рассказывается, как вносить постоянные изменения в конфигурацию локальной сети с помощью стандартных файлов и команд Linux. Linux ожидает, что настройки TCP/IP будут в определенных местах, и может потребоваться их изменить, если настройки по умолчанию не подходят. В уроке рассматриваются следующие темы: 
+
+* Как Linux определяет сетевые интерфейсы. 
+* Активация интерфейса при загрузке и базовой IP-настройке. 
+* Как операционная система связывает имена с хостами. 
+
+Рассматривались следующие концепции, команды и процедуры: 
+
+* Соглашения об именах интерфейсов. 
+* Вывод списка сетевых интерфейсов с `ip` и `nmcli`. 
+* Активация интерфейса с помощью `ifup` и `ifdown`. 
+* Команда `hostnamectl` и файл `/etc/hostname`. 
+* Файлы `/etc/nsswitch.conf`, `/etc/hosts` и `/etc/resolv.conf`.
+
+
+## Ответы на упражнения для закрепления
+
+**1. Какие команды можно использовать для вывода списка сетевых адаптеров, присутствующих в системе?**  
+
+**2. Какой тип сетевого адаптера с именем интерфейса `wlo1`?**  
+
+**3. Какую роль играет файл `/etc/network/interfaces` во время загрузки?**  
+
+**4. Какая запись в `/etc/network/interfaces` настраивает интерфейс `eno1` для получения настроек IP с помощью DHCP?**  
+
+
+
+## Ответы на упражнения для размышления
+
+**1. Как можно использовать команду `hostnamectl` для изменения только статического имени хоста локального компьютера на брандмауэр?**  
+
+**2. Какие детали, кроме имен хостов, можно изменить с помощью команды `hostnamectl`?**  
+
+**3. Какая запись в `/etc/hosts` связывает брандмауэр и маршрутизатор с IP `10.8.0.1`?**  
+
+**4. Как можно изменить файл `/etc/resolv.conf`, чтобы все запросы DNS отправлялись на `1.1.1.1`?**  
