Update 109.2 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 1.md
@@ -282,21 +282,28 @@ search mydomain.net mydomain.com
 ## Ответы на упражнения для закрепления
 
 **1. Какие команды можно использовать для вывода списка сетевых адаптеров, присутствующих в системе?**  
+Команды `ip link show`, `nmcli device` и устаревший `ifconfig`.
 
 **2. Какой тип сетевого адаптера с именем интерфейса `wlo1`?**  
+Имя начинается с `wl`, значит, это адаптер беспроводной локальной сети.
 
 **3. Какую роль играет файл `/etc/network/interfaces` во время загрузки?**  
+Он имеет конфигурации, используемые командой `ifup` для активации соответствующих интерфейсов во время загрузки.
 
 **4. Какая запись в `/etc/network/interfaces` настраивает интерфейс `eno1` для получения настроек IP с помощью DHCP?**  
-
+Строка `iface eno1 inet dhcp`.
 
 
 ## Ответы на упражнения для размышления
 
-**1. Как можно использовать команду `hostnamectl` для изменения только статического имени хоста локального компьютера на брандмауэр?**  
+**1. Как можно использовать команду `hostnamectl` для изменения только *статического* имени хоста локального компьютера на `firewall`?**  
+С параметром `--static: hostnamectl --static set-hostname firewall`.
 
 **2. Какие детали, кроме имен хостов, можно изменить с помощью команды `hostnamectl`?**  
+`hostnamectl` также может установить значок по умолчанию для локального компьютера, его тип шасси, расположение и среду развертывания.
 
 **3. Какая запись в `/etc/hosts` связывает брандмауэр и маршрутизатор с IP `10.8.0.1`?**  
+Запись `10.8.0.1 firewall router`.
 
 **4. Как можно изменить файл `/etc/resolv.conf`, чтобы все запросы DNS отправлялись на `1.1.1.1`?**  
+Использование сервера имен `1.1.1.1` в качестве единственной записи сервера имен.
