Update 109.2 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 1.md
@@ -306,4 +306,4 @@ search mydomain.net mydomain.com
 Запись `10.8.0.1 firewall router`.
 
 **4. Как можно изменить файл `/etc/resolv.conf`, чтобы все запросы DNS отправлялись на `1.1.1.1`?**  
-Использование сервера имен `1.1.1.1` в качестве единственной записи сервера имен.
+Использование `nameserver 1.1.1.1` в качестве единственной записи сервера имен.
