Update 109.2 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
@@ -10,4 +10,6 @@
 
 ## Введение
 
-Linux поддерживает практически все сетевые технологии, используемые для подключения серверов, контейнеров, виртуальных машин, настольных компьютеров и мобильных устройств. Соединения между всеми этими сетевыми узлами могут быть динамическими и разнородными, что требует соответствующего управления операционной системой, работающей в них. В прошлом дистрибьюторы разрабатывали собственные индивидуальные решения для управления динамической сетевой инфраструктурой. Сегодня такие инструменты, как NetworkManager и systemd, предоставляют более полные и интегрированные функции для удовлетворения всех конкретных требований.
+Linux поддерживает практически все сетевые технологии, используемые для подключения серверов, контейнеров, виртуальных машин, настольных компьютеров и мобильных устройств. Соединения между всеми этими сетевыми узлами могут быть динамическими и разнородными, что требует соответствующего управления операционной системой, работающей в них. 
+
+В прошлом дистрибьюторы разрабатывали собственные индивидуальные решения для управления динамической сетевой инфраструктурой. Сегодня такие инструменты, как *NetworkManager* и *systemd*, предоставляют более полные и интегрированные функции для удовлетворения всех конкретных требований.
