Update 109.2 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.2 Persistent network configuration/109.2 Lesson 2.md
@@ -13,3 +13,67 @@
 Linux поддерживает практически все сетевые технологии, используемые для подключения серверов, контейнеров, виртуальных машин, настольных компьютеров и мобильных устройств. Соединения между всеми этими сетевыми узлами могут быть динамическими и разнородными, что требует соответствующего управления операционной системой, работающей в них. 
 
 В прошлом дистрибьюторы разрабатывали собственные индивидуальные решения для управления динамической сетевой инфраструктурой. Сегодня такие инструменты, как *NetworkManager* и *systemd*, предоставляют более полные и интегрированные функции для удовлетворения всех конкретных требований.
+
+
+## Сетевой менеджер
+
+В большинстве дистрибутивов Linux используется сервисный демон *NetworkManager* для настройки сетевых подключений системы и управления ими. Цель NetworkManager - сделать конфигурацию сети максимально простой и автоматической. Например, при использовании DHCP NetworkManager организует изменение маршрута, выборку IP-адреса и, при необходимости, обновления локального списка DNS-серверов. Когда доступны как проводное, так и беспроводное подключение, NetworkManager по умолчанию устанавливает приоритет проводного подключения. NetworkManager будет стараться поддерживать хотя бы одно соединение постоянно, когда это возможно.
+
+>Запрос с использованием DHCP (*протокол динамической конфигурации хоста*) обычно отправляется через сетевой адаптер, как только устанавливается соединение с сетью. Затем активный в сети DHCP-сервер отвечает настройками (IP-адрес, сетевая маска, маршрут по умолчанию и т. Д.), Которые запрашивающая сторона должна использовать для связи по протоколу IP.
+
+По умолчанию демон NetworkManager управляет сетевыми интерфейсами, не упомянутыми в файле `/etc/network/interfaces`. Это сделано, чтобы не мешать другим методам конфигурации, которые также могут присутствовать, таким образом изменяя только автоматические интерфейсы. 
+
+Служба NetworkManager работает в фоновом режиме с привилегиями root и запускает необходимые действия, чтобы система оставалась в сети. Обычные пользователи могут создавать и изменять сетевые соединения с клиентскими приложениями, которые, хотя сами не имеют привилегий root, способны связываться с базовой службой для выполнения запрошенных действий. 
+
+Клиентские приложения для NetworkManager доступны как для командной строки, так и для графической среды. Для последнего клиентское приложение является аксессуаром среды рабочего стола (под такими именами, как *nm-tray*, *network-manager-gnome*, *nm-applet* или p*lasma-nm*) и обычно доступно через значок индикатора в углу. панели рабочего стола или из служебной программы настройки системы. 
+
+В командной строке NetworkManager предоставляет две клиентские программы: `nmcli` и `nmtui`. Обе программы имеют одинаковые базовые функции, но `nmtui` имеет интерфейс на основе curses, а `nmcli` - более полная команда, которую также можно использовать в сценариях. Команда `nmcli` разделяет все связанные с сетью свойства, контролируемые NetworkManager, на категории, называемые *объектами*: 
+
+`general`  
+Общий статус и операции NetworkManager. 
+
+`networking`  
+Общий сетевой контроль. 
+
+`radio`  
+Радиопереключатели NetworkManager. 
+
+`connection`  
+Подключения NetworkManager. 
+
+`device`  
+Устройства, управляемые NetworkManager.  
+
+`agent`  
+Секретный агент NetworkManager или агент polkit. 
+
+`monitor`  
+Отслеживайте изменения NetworkManager. 
+
+Имя объекта - это главный аргумент команды `nmcli`. Например, чтобы показать общий статус подключения системы, в качестве аргумента должен быть указан объект general:
+
+```console
+$ nmcli general
+STATE      CONNECTIVITY  WIFI-HW  WIFI     WWAN-HW  WWAN
+connected  full          enabled  enabled  enabled  enabled
+```
+
+Столбец `STATE` показывает, подключена ли система к сети или нет. Если соединение ограничено из-за внешней неправильной конфигурации или ограничений доступа, тогда столбец `CONNECTIVITY` не будет сообщать `full` статус подключения. Если `Portal` отображается в столбце `CONNECTIVITY`, это означает, что для завершения процесса подключения требуются дополнительные шаги аутентификации (обычно через веб-браузер). Остальные столбцы сообщают о состоянии беспроводных подключений (если есть), `WIFI` или `WWAN` (глобальная беспроводная сеть, то есть сотовые сети). Суффикс `HW` указывает, что статус соответствует сетевому устройству, а не сетевому подключению системы, то есть он сообщает, включено или отключено оборудование для экономии энергии. 
+
+Помимо аргумента объекта, `nmcli` также нуждается в аргументе команды для выполнения. Команда `status` используется по умолчанию, если аргумент команды отсутствует, поэтому команда `nmcli general` фактически интерпретируется как `nmcli general status`. 
+
+Вряд ли необходимо предпринимать какие-либо действия, когда сетевой адаптер подключен напрямую к точке доступа с помощью кабелей, но беспроводные сети требуют дальнейшего взаимодействия для приема новых участников. `nmcli` облегчает процесс подключения и сохраняет настройки для автоматического подключения в будущем, поэтому он очень полезен для ноутбуков или любых других мобильных устройств. 
+
+Перед подключением к wi-fi удобно сначала перечислить доступные сети в локальной зоне. Если в системе есть работающий адаптер Wi-Fi, то объект устройства будет использовать его для сканирования доступных сетей с помощью команды `nmcli device wifi list`:
+
+```console
+$ nmcli device wifi list
+IN-USE  BSSID              SSID        MODE   CHAN  RATE        SIGNAL  BARS  SECURITY
+        90:F6:52:C5:FA:12  Hypnotoad   Infra  11    130 Mbit/s  67      ▂▄▆_  WPA2
+        10:72:23:C7:27:AC  Jumbao      Infra  1     130 Mbit/s  55      ▂▄__  WPA2
+        00:1F:33:33:E9:BE  NETGEAR     Infra  1     54 Mbit/s   35      ▂▄__  WPA1 WPA2
+        A4:33:D7:85:6D:B0  AP53        Infra  11    130 Mbit/s  32      ▂▄__  WPA1 WPA2
+        98:1E:19:1D:CC:3A  Bruma       Infra  1     195 Mbit/s  22      ▂___  WPA1 WPA2
+```
+
+Большинство пользователей, вероятно, будут использовать имя в столбце `SSID` для определения интересующей сети. Например, команда `nmcli` может снова подключиться к сети с именем Hypnotoad, используя объект устройства:
